# Game2026

./: .gitignore  CubeEditor2.rar  README.md
Game/: Game.slnx  TODO.md  ref.md
Game/Engine/: Engine.vcxproj  Engine.vcxproj.filters  EngineConfig.h  Framebuffer.cpp  Framebuffer.h  NanoEngine.cpp  NanoMath.h  NanoOpenGL3.cpp  NanoOpenGL3.h  NanoOpenGL3Advance.h  NanoRenderGeometryGen.cpp  NanoRenderGeometryGen.h  NanoRenderMaterial.h  NanoRenderMesh.cpp  NanoRenderMesh.h  NanoRenderModel.cpp  NanoRenderTextures.cpp  NanoRenderTextures.h  NanoScene.cpp  NanoScene.h  NanoWindow.cpp  OGLBuffer.cpp  OGLBuffer.h  OGLContext.cpp  OGLContext.h  OGLEnum.h  OGLEnum.inl  OGLShader.cpp  OGLVertexAttribute.cpp  OGLVertexAttribute.h  OpenGL3Enum.h  OpenGL3Enum.inl  stdafx.h
Game/Game/: Camera.cpp  Camera.h  ExampleApp001.cpp  ExampleApp002.cpp  ExampleApp003.cpp  Framebuffer.cpp  Framebuffer.h  Game.vcxproj  Game.vcxproj.filters  GameApp.cpp  GameApp.h  GameConfig.h  GameScene.cpp  GameScene.h  GameSceneO.cpp  GameSceneO.h  GameWorldData.h  GameWorldDataO.h  GridAxis.cpp  GridAxis.h  LightO.cpp  LightO.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Minimal.cpp  Model.cpp  Model.h  NanoCore.cpp  NanoCore.h  NanoEngine.cpp  NanoEngine.h  NanoIO.cpp  NanoLog.cpp  NanoMath.cpp  NanoMath.h  NanoOpenGL3.cpp  NanoOpenGL3.h  NanoOpenGL3Advance.h  (+58 more)
Game/Game2/: Game2.vcxproj  Game2.vcxproj.filters  GameApp.cpp  GameConfig.h  GameModel.cpp  GameModel.h  GameScene.cpp  GameScene.h  GameWorldData.h  OldGameScene.cpp  OldGameScene.h  RenderPass1.cpp  RenderPass1.h  RenderPass2.cpp  RenderPass2.h  RenderPass6.cpp  RenderPass6.h  main.cpp  stdafx.h
Game/Game3/: EditorCursor.cpp  EditorCursor.h  Game3.vcxproj  Game3.vcxproj.filters  GameApp.cpp  GeomMap.cpp  GeomMap.h  GeomTileMap.cpp  GeomTileMap.h  Map.cpp  Map.h  MapGenGeom.cpp  MapGrid.cpp  MapGrid.h  MapLoadObjTile.cpp  MapLoadObjTile.h  RenderPass2.cpp  RenderPass2.h  RenderPassFinal.cpp  TileMap.cpp  TileMap.h
Game/MinimalOGL/: MinOGL.h  MinimalOGL.vcxproj  main.cpp
Game/Pico3D/: Pico3D.vcxproj  main.cpp
temp/: ADVANCED_TECHNIQUES.md  FINAL_REPORT.md  INTEGRATION_GUIDE.md  README.md  README_RSM_ATLAS.md  RSM_ATLAS_IMPLEMENTATION_STATUS.md  SHADOW_MODES_README.md  SHADOW_MODES_SUMMARY.md
temp/docs/: SHADOW_MODES.md
temp/examples/: advanced_shadow_modes_example.cpp  shadow_modes_example.cpp
temp/shaders/: basic_advanced.frag  basic_advanced.vert  basic_advanced_atlas.frag  basic_advanced_rsm.frag  fxaa.frag  instanced.frag  instanced.vert  rsm_temporal_filter.frag  rsm_temporal_filter.vert  shadow_atlas.frag  (+6 more)
temp2/: doc.md
temp3/: main.cpp
tempLLM/1/: CMakeLists.txt  README.md
tempLLM/1/docs/: api_reference.md
tempLLM/1/examples/: basic_example.cpp  enhanced_example.cpp
tempLLM/1/src/: batch_operations.hpp  concepts.hpp  core.hpp  exceptions.hpp  extensions.hpp  functions.hpp  gl46.hpp  handles.hpp  opengl_types.hpp  platform_config.hpp  vertex_attributes.hpp
tempLLM/1/src/utils/: debug.hpp
tempLLM/1/src/validation/: validator.hpp
tempLLM/1/tests/: CMakeLists.txt  test_handles.cpp
(+29 files in other folders)
